<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_player_panel"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_exist"
        android:textColor="@color/tv_white"
        android:textSize="20sp"
        android:focusable="false"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/update_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_error_details"
        android:focusable="false"
        android:descendantFocusability="afterDescendants"
        android:maxHeight="300dp">

        <TextView
            android:id="@+id/update_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:nextFocusDown="@id/btn_cancel"
            android:nextFocusLeft="@id/btn_cancel"
            android:nextFocusRight="@id/btn_update"
            android:text="@string/update_desc"
            android:textColor="@color/text_secondary"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"/>
    </ScrollView>

    <ProgressBar
        android:id="@+id/update_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:progressDrawable="@drawable/progress_update"
        android:focusable="false"
        android:max="100"
        android:visibility="gone" />

    <TextView
        android:id="@+id/update_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        android:textColor="@color/text_secondary"
        android:textSize="12sp"
        android:focusable="false"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_accent"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/cancel_uppercase"
            android:textColor="@color/text_secondary"
            android:nextFocusUp="@+id/update_desc"
            android:nextFocusRight="@+id/btn_update"
            android:nextFocusDown="@+id/btn_update"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_button_accent"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/update_btn"
            android:textColor="@color/tv_white"
            android:textStyle="bold"
            android:focusable="true"
            android:nextFocusUp="@+id/update_desc"
            android:nextFocusLeft="@+id/btn_cancel"
            android:nextFocusDown="@+id/btn_cancel"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>